--- a/resources/i18n/strings_en.properties
+++ b/resources/i18n/strings_en.properties
@@ -8,5 +8,65 @@ string_navdownloads=Downloads
 string_navpartners=Partners
 string_navlinks=Links
 
+string_homeLinksAschCode=Asch source code repository
+string_homeLinksAschExplorer=Explorer
+string_homeLinksAschExplorerContent=Blockchain explorer of Asch
+string_homeLinksAschWallet=Wallet
+string_homeLinksAschWalletContent=Asch online wallet
+string_homeLinksAschForum=Forum
+string_homeLinksAschForumContent=Asch forum
+
 string_introductionTopTitle=Introduction
 string_introductionTopContent=Next Generation Decentralized Application Platform
+string_introductionContentTitleOne=Asch is an efficient, flexible and safe decentralized application platform, which was initially designed to lower the threshold / barrier to entry for developers.
+string_introductionContentOne=Asch is an efficient, flexible and safe decentralized application platform, which was initially designed to lower the threshold / barrier to entry for developers. With the use of JavaScript as its application programming language, the platform makes use of relational databases to store data, drawing similarities between developing a DAPP and developing a traditional web application. This type of platform carries a great deal of appeal to developers, as well as small and medium enterprises, since its ease of use results in greater productivity, fuelling and facilitating a more prosperous ecosystem in the process. Asch is open in design and is not limited to any particular niche market such as finance, document storage, copyright certification, etc. The APIs which it provides are underlying and abstract, and they can be combined freely so as to facilitate a variety of applications. In terms of the consensus mechanism, Asch has inherited and enhanced the DPOS algorithm, simultaneously reducing the probability of forking and double spending by a significant degree. Furthermore, Asch's side chain, i.e. the application mode, not only improves scalability by delaying the expansion of the blockchain, but also makes DAPPs more flexible and personalized. Asch is a forward-looking, low-cost and one-stop application solution, which is believed to be a new generation of incubator for decentralized application.
+string_introductionContentTitleTwo=The services provided by the Asch platform include a public chain and a set of application SDKs.
+string_introductionContentTwo=The services provided by the Asch platform include a public chain and a set of application SDKs; the public chain is called the main chain. The Asch application SDKs can be used to develop blockchain applications with a free-running, immutable ledger. These applications are also known as side chain applications. An application SDK has a built-in cross-chain protocol, through which the side chain can communicate with the main chain. In other words, the main chain has the function of asset routing, through which a variety of assets can flow among different applications. Asch's ecological system contains multiple chains, with each chain possessing the ability to carry multiple tokens or assets. Each token or asset can also be transferred to multiple chains.
+
+string_dappsTitle=Dapps
+string_dappsTopContent=Next Generation Decentralized Application Platform
+string_applicationDetailContent1=CCTime, focusing on spreading valuable information, is a distributed sharing platform of social news developed on Asch side chain technology.
+string_applicationDetailMore1=Read more
+string_applicationDetailTitle2=Koumei Cottage
+string_applicationDetailDescribe2=Koumei Cottage(KMC), which is called ?Kong Ming Wu? in Chinese, is a decentralized market predicting application based on Asch platform.
+string_applicationDetailTitle3=Help China
+string_applicationDetailDescribe3=Help China is a mobile application of light-social, news and platform based on Asch chain with the function that users can allocate and accept assignments online, chat and browsing news.
+string_applicationDetailDescribe4=Hello kimi is the first cloud pets social casual game platform in China based on Asch side-chain technology.
+
+string_feature1=Features 01.
+string_feature2=Features 02.
+string_commonText1=Next Generation Decentralized Application Platform
+string_featuresTopTitle=Public chain
+string_featuresTopTitleContent=Asch's public chain is mainly responsible for data sharing between infrastructure and applications; it is also used for asset routing. The SDK is responsible for building specific applications.
+
+string_featuresTopTitle2=Application management
+string_featuresTopTitleContent2=Applications need to register meta-information into the main chain before issuing it. The meta-information includes the name and description of the application, the initial witness, and other relevant configuration information for the asset routing. Users can browse, retrieve, trace, download and visit decentralized applications through the module.
+string_featuresTopTitle3=Asset routing
+string_featuresTopTitleContent3=The assets registered on the main-chain can communicate with each application via cross-chain. Although applications are separated from each other, the flow of value could be realized through the asset routing function of the main chain.
+string_featuresTopTitle4=Asset management
+string_featuresTopTitleContent4=Any account can register and issue multiple assets, and the issuer can configure the assets in various ways, for example, through the use of an access control list.
+string_featuresTopTitle5=Delegate management
+string_featuresTopTitleContent5=Each account with tokens on the Asch main-chain can be registered as a delegate, which is also known as a ?witness?. The top 101 delegates are given the opportunity and responsibility of being the system's account keepers, including the right to forging (or mining, accounting and generating blocks) which results in the reward of a certain amount of tokens. The account keepers can be promoted via the vote of the token holders, who are able to vote for any delegate, to raise their ranking.
+string_featuresTopTitle6=Account management
+string_featuresTopTitleContent6=The account model is adopted at the lower level of Asch chain. Each private key corresponds to an account in which the basic user information such as the wallet address, public key, nickname, as well as other configuration information or statistical information is stored. As all application chains use the same account model, an account on the Asch chain is able to use the functions of all applications directly.
+
+string_featuresTopTitle7=SDK
+string_featuresTopTitleContent7=Asch's public chain is mainly responsible for data sharing between infrastructure and applications; it is also used for asset routing. The SDK is responsible for building specific applications.
+string_featuresTopTitle8=ORM
+string_featuresTopTitleContent8=Object-Relational Mapping (ORM) can support relational mapping of objects to organize business data, and support index allocation, whilst complex searches can be realized with the JSON language.
+string_featuresTopTitle9=JavaScript
+string_featuresTopTitleContent9=Developers can utilize and combine huge amounts of third-party components freely by using JavaScript as the native language.
+string_featuresTopTitle10=Two-way peg cross-chain protocol
+string_featuresTopTitleContent10=Cross-chain protocol supporting two-way peg.
+string_featuresTopTitle11=Immutable ledger
+string_featuresTopTitleContent11=An immutable ledger is built in with the account setup function. All invoking operations and statuses will be written into the immutable ledger when developers and users invoke a chain code function.
+string_featuresTopTitle12=Lower level interfaces
+string_featuresTopTitleContent12=In comparison to the Solidity language of Ethereum, ASCH allows developers to use underlying APIs so as to gain maximum control of the whole system, examples including the handler and filter of every cycle time event.
+string_featuresTopTitle13=Customize fee definitions
+string_featuresTopTitleContent13=Developers can set up different service charges for every event or chain code, and even can set up different asset tokens aside from XAS as service charge.
+string_featuresTopTitle14=Transaction privacy
+string_featuresTopTitleContent14=The feature of optional transaction privacy.
+string_featuresTopTitle15=SmartDB
+string_featuresTopTitleContent15=Cache and persistent data storage can be synchronized automatically to greatly improve writing performance.
+
+string_featuresTopTitle15=SmartDB
