--- a/resources/i18n/strings_zh-CN.properties
+++ b/resources/i18n/strings_zh-CN.properties
@@ -8,6 +8,65 @@ string_navdownloads=下载
 string_navpartners=合作伙伴
 string_navlinks=链接
 
+string_homeLinksAschCode=阿希源码仓库
+string_homeLinksAschExplorer=区块浏览器
+string_homeLinksAschExplorerContent=阿希区块浏览器
+string_homeLinksAschWallet=钱包
+string_homeLinksAschWalletContent=阿希在线钱包
+string_homeLinksAschForum=论坛
+string_homeLinksAschForumContent=阿希论坛
+
 string_introductionTopTitle=简介
 string_introductionTopContent=下一代去中心化应用平台
+string_introductionContentTitleOne=阿希是一个高效、灵活、安全的去中心化应用平台，其设计初衷是为了降低开发者的门槛。
+string_introductionContentOne=阿希是一个高效、灵活、安全的去中心化应用平台，其设计初衷是为了降低开发者的门槛。比如使用javascript作为应用编程语言，支持关系数据库来存储交易数据， 使得开发一个dapp与传统的web应用非常相似，相信这对开发者和中小型企业有很大的吸引力，只有开发者的生产力提高了，整个平台的生态才能够更迅速的繁荣起来。 Asch 在设计上也是开放的，并没有局限于某个细分领域，比如金融、文件存储、版权证明等，其提供的`api`都是较底层和抽象的，它们可以被自由组合实现各种不同的应用。 在共识机制方面，Asch继承并增强了DPOS算法，大大降低了分叉几率和双重支付风险。另外，Asch的侧链即应用模式不但延缓了区块链膨胀问题，还使得dapp更加的灵活和个性化。 Asch是一个具有前瞻性的、低成本的一站式应用解决方案，相信将成为新一代去中心化应的孵化器。
+string_introductionContentTitleTwo=Asch平台提供的服务包括一个公有链和一套应用sdk。
+string_introductionContentTwo=Asch平台提供的服务包括一个公有链和一套应用sdk。这个公有链我们称之为主链，而使用Asch应用sdk可以开发出拥有独立不可篡改账本的区块链应用，这些应用我们也叫做侧链应用。 应用sdk内置了跨链协议，通过该协议可以与主链进行资产互通，也就是说主链承担了资产路由的功能，通过资产路由，各个应用之间可以实现多种资产的流转。 阿希的生态体系包含多条链，每个链可以承载多个代币或资产，每个代币或资产也可以转入多条链上。
 
+
+string_dappsTitle=阿希应用
+string_dappsTopContent=下一代去中心化应用平台
+string_applicationDetailContent1=CCTime是以传播价值信息理念为核心，基于阿希（Asch）侧链技术开发的分布式社会新闻分享与交流平台。
+string_applicationDetailMore1=查看更多
+
+string_applicationDetailTitle2=孔明屋
+string_applicationDetailDescribe2=Koumei Cottage， 简称 KMC，中文名孔明屋，是基于阿希平台开发的去中心化的预测市场。
+string_applicationDetailTitle3=帮呗
+string_applicationDetailDescribe3=帮呗是一款基于Asch链的具有用户线上发布任务以及用户线上领取任务、用户聊天、浏览新闻等功能的轻社交类、新闻类、平台类移动端应用。
+string_applicationDetailDescribe4=Hello kimi是国内首款基于区块链技术（Asch侧链）开发的云宠物社交休闲游戏应用平台。
+
+string_feature1=特点 01.
+string_feature2=特点 02.
+string_commonText1=下一代去中心化应用平台
+string_featuresTopTitle=公有链
+string_featuresTopTitleContent=阿希的公有链主要负责基础设施、应用间的数据共享以及资产路由，SDK负责构建具体的应用。
+
+string_featuresTopTitle2=应用管理
+string_featuresTopTitleContent2=应用在发布前需要将元信息注册到主链 这些信息包括应用的名称、描述、初始见证人以及资产路由所需的相关配置信息 用户可通过该模块进行去中心化应用的浏览、检索、溯源、下载及访问。
+string_featuresTopTitle3=资产路由
+string_featuresTopTitleContent3=主链上注册的资产可以与每个应用互通(跨链) 虽然应用之间是隔离的，但可以通过主链的资产路由功能实现价值的流动。
+string_featuresTopTitle4=资产管理
+string_featuresTopTitleContent4=任何账户都可以登记并发行若干个资产，发行方可以对资产进行各种配置，如访问控制列表等。
+string_featuresTopTitle5=受托人管理
+string_featuresTopTitleContent5=受托人又叫做见证人，阿希主链的每个持币账户都可以注册成为受托人 排名靠前的受托人有机会成为系统的记账人，记账人有锻造(或者叫做挖矿、记账、提交区块)的权力, 并获取一定的代币奖励 受托人通过获得持币人的投票以提升排名，每个持币人都可以给任意受托人投票。
+string_featuresTopTitle6=账户管理
+string_featuresTopTitleContent6=阿希链底层采用了账户模型，每个私钥对应一个账户 账户中储存了用户的钱包地址、公钥、昵称等基本信息以及其他配置或统计信息 由于每个应用链都使用了相同的账户模型，因此阿希链上的一个账户可以直接使用各个应用的功能。
+
+string_featuresTopTitle7=SDK
+string_featuresTopTitleContent7=阿希主链主要负责基础架构和应用间的数据传递，也可以用于资产路由，SDK用于构建具体的应用。
+string_featuresTopTitle8=ORM
+string_featuresTopTitleContent8=支持对象关系映射来组织业务数据，支持索引配置，可通过json语法进行复杂查询。
+string_featuresTopTitle9=JavaScript
+string_featuresTopTitleContent9=使用javascript作为原生语言，开发者可使用海量的第三方组件，进行自由组合。
+string_featuresTopTitle10=Two-way peg cross-chain protocol
+string_featuresTopTitleContent10=支持双向锚定的跨链协议。
+string_featuresTopTitle11=Immutable ledger
+string_featuresTopTitleContent11=内置账本创建功能，开发者及用户只需要调用合约，所有的调用操作以及状态会被自动写入不可篡改账本。
+string_featuresTopTitle12=Lower level interfaces
+string_featuresTopTitleContent12=相比以太坊的solidity语言，阿希允许开发者使用更多的底层接口，以便对系统进行最大程度的控制 比如，各生命周期事件的handler及filter。
+string_featuresTopTitle13=Customize fee definitions
+string_featuresTopTitleContent13=开发者可以为每个事务或合约设置不同的手续费，甚至设置不同的资产代币作为手续费，而不局限于阿希币。
+string_featuresTopTitle14=Transaction privacy
+string_featuresTopTitleContent14=可选的交易隐私特性。
+string_featuresTopTitle15=SmartDB
+string_featuresTopTitleContent15=缓存与持久化存储自动同步，可大幅提升写入性能。
