index switch language

--- a/resources/i18n/strings_zh-CN.properties
+++ b/resources/i18n/strings_zh-CN.properties
@@ -70,3 +70,63 @@ string_featuresTopTitle14=Transaction privacy
 string_featuresTopTitleContent14=可选的交易隐私特性。
 string_featuresTopTitle15=SmartDB
 string_featuresTopTitleContent15=缓存与持久化存储自动同步，可大幅提升写入性能。
+
+string_AdvantagesTitle=优势
+
+string_advantages1=成本
+string_advantagesContent1=开发者可自定义燃料代币，可有效控制团队运营成本和用户使用成本
+string_advantages2=安全
+string_advantagesContent2= PBFT enhanced DPOS
+string_advantages3=复用
+string_advantagesContent3=主链作为基础设施，不同应用之间数据共享
+string_advantages4=灵活
+string_advantagesContent4=资产与应用解耦，一币多链，一链多币
+string_advantages5=易用
+string_advantagesContent5=特色的ORM和SmartDB功能，以及采用了ecmascript 6标准，接近于传统web应用的开发模式，极大的降低了区块链技术门槛
+string_advantages6=性能
+string_advantagesContent6=1500tps，分片，并行
+
+string_scenariosTitle=场景
+string_scenariosTitle1=阿希适用于但不仅限于以下列举的场景
+string_scenariosTitle2=内容发布平台
+string_scenariosDescribe2=关键字：代币激励、价值传递、群体智慧
+string_scenariosContent2=在互联网领域，巨头通过分析用户的阅读习惯，推送用户感兴趣的内容，从而赢得用户的喜爱的同时，算法也创造了一个狭隘的封闭空间，剥夺了用户的选择权和认知权。利用区块链去中心化的特点，让用户群体智慧筛选出整个社区最有趣的新闻资讯。同时加入代币激励机制，利用经济激励激发参与者的积极性，解决优质内容难以识别和变现问题，让价值回归于价值创造者和传递者手里，让所有的参与者共同分享价值。
+string_scenariosTitle3=预测市场
+string_scenariosDescribe3=关键字：代币激励、价值传递、人人参与
+string_scenariosContent3=预测市场是基于市场原则来收集整合交易各方对同一事件的信心和判断，从而产生对事件的未来结果的预测。借助区块链的分布式、公开、透明、不可篡改的特性，可以解决传统预测平台公信力不足的问题，从而建立一个可信、自治、价值传递、可扩展的预测市场平台，借助大规模群体协作涌现出来的高级智慧,对将要发生的事件进行准确预测，同时利用内置的代币激励，吸引更多的受众参与进来。
+string_scenariosTitle4=交易所
+string_scenariosDescribe4=关键字：安全、去中心化、手续费低、匿名、可扩展
+string_scenariosContent4=基于区块链分布式技术的交易平台是阿希（Asch）生态中重要的一环，阿希（Asch）的定位是基于侧链技术的新一代区块链应用开发平台，在这个平台上将会孵化出众多优秀的项目，必然也存在着众多不同种类的令牌。此时，一个基于阿希（Asch）侧链技术开发的交易平台是众多使用者的基本需求。基于阿希平台的交易所拥有去中心化、去中介、安全、手续费低、匿名等相关特性，还具有其他交易平台不具备的可扩展性。后期利用侧链技术将打通比特币、以太坊等国际优质项目，在实现数字资产流通的同时还可以消除数字资产之间的应用隔离。
+string_scenariosTitle5=社交媒体
+string_scenariosDescribe5=关键字：价值网络、数据私有
+string_scenariosContent5=建立在互联网上的社交媒体企业，通过用户不得不遵守的用户协议，强行掠夺了用户生产的数据，单方面消费用户，用户没有充分享受到自己创作、建立和维护自己社区的利益。所以基于区块链分布式技术的社交媒体是未来发展的一个趋势，利用区块链去中心的特征，消除掠夺者，实现数据自由、价值自由。再利用内置的代币机制，建立起一套完整、正反馈的价值激励经济体系，来促进整个生态系统的发展。
+string_scenariosTitle6=IP版权保护
+string_scenariosDescribe6=关键字：溯源、价值激励
+string_scenariosContent6=IP经济的火爆让很多人认知到IP的重要性，而一个IP的产生大部分来源与文学作品，这凸显出了版权的重要性。版权保护最大的痛点在流通环节取证，流通环节的不可控导致无法对版权进行全方位的保护。区块链不可篡改、溯源的特性可以给版权提供整个生态周期的保障， 极大的减少盗版行为。同时在作品创作过程中的确权也可以作为证据永久存储在区块链上，作为未来解决纠纷的证据留存。
+string_scenariosTitle7=社会公益
+string_scenariosDescribe7=关键字：公开透明、安全、去中心
+string_scenariosContent7=社会公益的本质是一次社会财富的再分配过程，财富再分配的目标、金额、执行都由公益组织决定，现在社会对公益捐赠的需求和公益组织公信力的丧失是目前公益领域最大的矛盾。 区块链本身所拥有的去中心、公开透明、不可篡改的特性，将接受捐赠、发放捐赠等全部操作置于公众的视野下，打破捐赠者和执行着之间的不信任隔膜。
+
+string_downloadsTitle=下载
+string_downloadsTitle1=U盘钱包
+string_downloadsTitle2=轻客户端
+string_downloadsTitle3=服务端安装包
+string_downloadsTitle4=手机钱包
+
+string_downloadContent1=支持多账户、多资产的PC端绿色版钱包，支持Windows、Ubuntu、MacOS(测试中)等平台。主要实现资产账户管理、转账、资产监控、备份与恢复等功能。适用于持有XAS和其他Asch平台资产的普通用户。
+string_downloadContent2=包含全部Asch平台前端功能的PC客户端，包括资产、个人中心、应用中心、区块生成、区块浏览、投票、转账、节点等Asch平台的全部功能，适用于需要全部平台功能的高级用户。
+string_downloadContent3=用于部署Asch平台的后端服务，运行Asch平台区块链服务并托管DAPP运行。Asch受托人或Asch节点需安装，普通用户无需安装。要求服务器CPU不低于2核、内存不小于4G、公网带宽不低于2M，操作系统为Linux 64（推荐使用Ubuntu Server 16.04）。
+string_downloadContent4=是一个支持 多账户、多资产 和 Asch平台DAPP 的手机端应用。支持Android平台和IOS平台（开发中），适用于持有XAS和其他Asch平台资产的普通用户。
+
+string_downloadLink1=下载
+string_downloadLink11=更多
+
+string_partnersTitle=合作伙伴
+string_linkTitle1=联系QQ
+string_linkTitle2=常用
+string_linkTitle3=社区
+string_linkTitle4=交易所
+
+string_footerLink1=微信
+string_footerLink2=微博
+string_footerLink3=电子邮箱
