--- a/resources/i18n/strings_en.properties
+++ b/resources/i18n/strings_en.properties
@@ -69,4 +69,62 @@ string_featuresTopTitleContent14=The feature of optional transaction privacy.
 string_featuresTopTitle15=SmartDB
 string_featuresTopTitleContent15=Cache and persistent data storage can be synchronized automatically to greatly improve writing performance.
 
-string_featuresTopTitle15=SmartDB
+string_AdvantagesTitle=Advantages
+
+string_advantages1=Low Cost
+string_advantagesContent1=Developers can customize a gas token, which can effectively control operation costs.
+string_advantages2=Safety
+string_advantagesContent2= PBFT enhanced DPOS. Multi-level payment passwords. Applications are isolated to prevent error spreading. Sandbox mechanism can manage untrusted code.
+string_advantages3=Reuseability
+string_advantagesContent3=Applications can sharing data on Asch platform. Furthermore, they can reused assets on different blockchains.
+string_advantages4=Flexibility
+string_advantagesContent4=Assets and applications are decoupled. One token can be used on multi-chains, and one chain can hold multiple tokens.
+string_advantages5=Usability
+string_advantagesContent5=Based on JavaScript stack,SDK supports advanced features like ORM?SmartDB etc that make DAPP development more easier.
+string_advantages6=Performance
+string_advantagesContent6=More than 1500 transactions per second, performance is scalable by fragment and parallel.
+
+string_scenariosTitle=Scenarios
+string_scenariosTitle1=The Asch platform can be applied to the following application scenarios, but is not limited to them.
+string_scenariosTitle2=Content publishing platform
+string_scenariosDescribe2=Key words: token incentive, value transfer, group wisdom
+string_scenariosContent2=On the internet, large enterprises deliver content which users are interested in by analyzing their reading habits, thus enabling them to capitalize on their behaviour. At the same time, the algorithm also creates a niche, which deprives users of their rights of choice and cognizance. However,through the use of the decentralization feature of the blockchain, the most interesting news in the community can be selected through the help of the group wisdom of the users. Meanwhile, the token incentive mechanism can be applied since its economic mechanism is able to stimulate the participant?s enthusiasm. This solves the problem of quality content being difficult to identify and to realize. The value will therefore return to its creators and deliverers, allowing for it to be shared by all participants.
+string_scenariosTitle3=Content publishing platform
+string_scenariosDescribe3=Key words: token incentive, value transfer, public participation
+string_scenariosContent3=Market prediction is the collection of indicators of confidence and judgment from different parties regarding the same topic, based on market principles, so as topredict the future result of an event. The blockchain is distributed, open, transparent and immutable. We believe that it is able to solve the issue of insufficient credibility which exists in traditional prediction platforms. This solution establishes a credible, autonomous, value-transitive and extensible platform for market prediction. The platform will be able to predict upcoming events with the aid of senior wisdom derived from large-scale co-operation, attracting more people to participate in the process by utilizing the built-in token incentive.
+string_scenariosTitle4=Exchange platform
+string_scenariosDescribe4=Key words: safety, decentralization, low fee, anonymity, scalability
+string_scenariosContent4=The exchange platform, which is based on distributed blockchain technology, is an important part of Asch's ecology. Asch represents a new generation of blockchain application development  platforms, based on side chain technology. On the platform, a number of excellent projects and many different types of tokens will be created and developed. At this moment in time, the system and functionality of the exchange platform represents the basic demand requirement from many users, since it includes a wide array of features such as decentralization, disintermediation, safety, low fees, anonymity,and scalability, which other exchange platforms do not have. With side chain technology, Bitcoin, Ethereum and other high-quality projects can become interconnected, allowing for streamlined circulation of digital assets, whilst eliminating isolation amongst them.
+string_scenariosTitle5=Social media
+string_scenariosDescribe5=Key words: value network, data, private
+string_scenariosContent5=Internet based social media companies plunder user production data and unilaterally consume users through protocols which users are forced to comply with. Users are not able to fully enjoy the benefits of creating, establishing and maintaining their own community. As a result, social media based on the main-chain distributed technology is a trend of future development. With the decentralization feature of the blockchain, it is able to achieve data and value freedom. Furthermore, through the use of the built-in token mechanism, a complete, positive-feedback value,stimulative economic system will be established so as to promote the development of the entire ecosystem.
+string_scenariosTitle6=IP Copyright protection
+string_scenariosDescribe6=Key words: tractability, value incentive
+string_scenariosContent6=The popularity of the IP economy has made many peopole aware of the importance of IP, and IP mostly comes from literary works, which highlights the importance of copyright. The biggest difficulty of copyright protection is to collect evidence in circulation. Circulation is uncontrollable, so comprehensive protection of copyright cannot be assured. Blockchain technology is able to greatly  reduce piracy, by providing protection to the entire ecosystem in the form of copyright which features traceability and immutability. The rights in the process of creation can be simultaneously and permanently stored in the blockchain; creating evidence for future potential disputes to be resolved easily.
+string_scenariosTitle7=Public donation
+string_scenariosDescribe7=Key words: transparency, safety, decentralization
+string_scenariosContent7=The essence of public donation is a process of social wealth redistribution. The goal, amount and execution of wealth redistribution are determined by public organizations. Nowadays, the biggest contradiction in the public welfare field is the demand for public donations to account for the loss of their credibility. The inherent features of decentralization, transparency and immutability of the blockchain make the acceptance, donation and all other operations inherently exposed to the public, breaking any distrust between donors and executors.
+
+string_downloadsTitle=Downloads
+string_downloadsTitle1=Wallet for PC
+string_downloadsTitle2=Light client
+string_downloadsTitle3=Node Installation Package
+string_downloadsTitle4=Mobile wallet
+
+string_downloadContent1=Green PC wallet with transfering?asset monitor?backup and recovery?supporting multi-account and multi-asset management, available on Windows?Ubuntu?MacOS, is designed for ordinary user to manage XAS and other Asch-platform asset.
+string_downloadContent2=All of the Asch platform front-end functions are available for the PC client with assets, personal center, application center, block forging, block browsing, voting, payment and suitable for advanced users who need all the platform functions.
+string_downloadContent3=It is an back-end service on Asch platform, running blockchain service and ensuring DAPP operation. Asch delegates or nodes need to install while normal users not. It requires sever is least 2-core CPU,4GB memory,2MB bandwidth and Linux 64 system(Ubuntu Server 16.04 is recomended).
+string_downloadContent4=It is an mobile application which supports multi-account, multi-asset and Asch platform DAPP in both Android and iOS platform which is in development. It is suitable for normal users who have XAS and other assets on Asch platform.
+
+string_downloadLink1=Download
+string_downloadLink11=More
+
+string_partnersTitle=Partners
+string_linkTitle1=QQ group
+string_linkTitle2=Commonly used
+string_linkTitle3=Community
+string_linkTitle4=Exchanges
+
+string_footerLink1=weChat
+string_footerLink2=weibo
+string_footerLink3=Email
