add dapp language switch

--- a/resources/i18n/strings_en.properties
+++ b/resources/i18n/strings_en.properties
@@ -128,3 +128,52 @@ string_linkTitle4=Exchanges
 string_footerLink1=weChat
 string_footerLink2=weibo
 string_footerLink3=Email
+
+
+string_dappNav1=Home
+string_dappNav2=Introduction
+string_dappNav3=Dapps
+string_dappNav4=Features
+string_dappNav5=Advantages
+string_dappNav6=Scenarios
+string_dappNav7=Downloads
+string_dappNav8=Partners
+string_dappNav9=Links
+
+string_applicationCenterTitle1=Home
+string_dappDescribe1=CCTime, focusing on spreading valuable information, is a distributed sharing platform of social news developed on Asch side chain technology.
+string_dappDescribe2=Koumei Cottage(KMC), which is called ?Kong Ming Wu? in Chinese, is a decentralized market predicting application based on Asch platform.
+string_dappDescribe3=Help China is a mobile application of light-social, news and platform based on Asch chain with the function that users can allocate and accept assignments online, chat and browsing news.
+string_dappDescribe4=Hello kimi is the first cloud pets social casual game platform in China based on Asch side-chain technology.
+string_aschSide1=Easy to use
+string_aschSide2=value sharing
+string_aschSide3=regulatory compliance
+string_aschSide4=value driven
+string_aschSide5=asset reuse
+string_aschSide6=decentralization
+string_aschSide7=Social contract
+string_aschSide8=task contract
+string_aschSide9=commonweal project
+string_aschSide10=data credibility
+string_aschSide11=high security
+string_aschSide12=smart games
+
+string_dappContentTitle21=Koumei Cottage
+string_dappContentTitle31=Help China
+string_dappIntroduction1=Introduction:
+
+string_dappIntroductionContent1=CCTime is a distributed sharing platform of social news, developed on Asch side chain technology. CCTime, which was reconstructed on the basis of Hacker News, uses block chain technology to change the existing decentralized content market, solves the problem that it is difficult to recognize, spread and realize premium content, and guarantees that the producer of premium content can make profits directly by new content value evaluation system. It is aimed to build a valuable news syndication and content sharing platform that coincides with public needs by rewarding high-quality news publishers and sharers with tokens.
+string_dappIntroductionContent2=Koumei Cottage(KMC)is a decentralized prediction market developed on Asch platform.It belongs to type 1 dapp.And KMC has the features of open-source, autonomy,distributed storage,token incentive,publicity and transparency according to the dapp definition in Asch white-paper(1). The difference from ETH dapp is that its data is stored in the independent block chain, rather than sharing  a chain or a set of account book with other application,and is not attached to other block chain system.
+string_dappIntroductionContent3=Help China is a mobile application of light-social, news and platform based on Asch chain with the function that users can allocate and accept assignments online, chat and browsing news. Help China announces demands of individuals and collective to other individuals or the collective through online matching rule so that other individuals or the collective can understand users? demands and fulfill them online or offline. By doing this, it will increase the interaction between people and solve the existing problem of human nature in reality to increase the friendly atmosphere of mutual help for the purpose of building a friendly and kind social environment.
+string_dappIntroductionContent4=Hello kimi is the first cloud pets social casual game platform in China based on Asch side-chain technology. Hello Kimi game is positioned as a blockchain social casual game, enabling multiplayers to be online simultaneously, and is not an ordinary cat game. Due to being developed based on side-chain technology, Asch can bear the high concurrency third-party application so as to ensure stable operation of the game.
+
+
+string_websiteText1=Website
+string_whitePaper1=WhitePaper
+
+string_dappFooterText11=weChat
+string_dappFooterText12=weibo
+string_dappFooterText13=Email
+
+
+
