--- a/resources/i18n/strings_zh-CN.properties
+++ b/resources/i18n/strings_zh-CN.properties
@@ -130,3 +130,47 @@ string_linkTitle4=交易所
 string_footerLink1=微信
 string_footerLink2=微博
 string_footerLink3=电子邮箱
+
+string_dappNav1=首页
+string_dappNav2=介绍
+string_dappNav3=应用
+string_dappNav4=产品特点
+string_dappNav5=优势
+string_dappNav6=场景
+string_dappNav7=下载
+string_dappNav8=合作伙伴
+string_dappNav9=链接
+
+string_applicationCenterTitle1=首页
+string_dappDescribe1=CCTime是以传播价值信息理念为核心，基于阿希（Asch）侧链技术开发的分布式社会新闻分享与交流平台。
+string_dappDescribe2=Koumei Cottage， 简称 KMC，中文名孔明屋，是基于阿希平台开发的去中心化的预测市场。
+string_dappDescribe3=帮呗是一款基于Asch链的具有用户线上发布任务以及用户线上领取任务、用户聊天、浏览新闻等功能的轻社交类、新闻类、平台类移动端应用。
+string_dappDescribe4=Hello kimi是国内首款基于区块链技术（Asch侧链）开发的云宠物社交休闲游戏应用平台。
+string_aschSide1=简单易用
+string_aschSide2=价值共享
+string_aschSide3=监管合规
+string_aschSide4=价值驱动
+string_aschSide5=资产复用
+string_aschSide6=去中心化
+string_aschSide7=社交合约
+string_aschSide8=任务合约
+string_aschSide9=公益项目
+string_aschSide10=数据可信任
+string_aschSide11=强安全保护
+string_aschSide12=智能游戏
+
+string_dappContentTitle21=孔明屋
+string_dappContentTitle31=帮呗
+string_dappIntroduction1=介绍:
+
+string_dappIntroductionContent1=CCTime是基于阿希（Asch）侧链技术开发的 分布式社会新闻分享与交流平台。CCTime 在 Hacker News 的基础上进行重 构，使用区块链技术改变现有中心化的内容市场格局，解决优质内容难以识别、 传播和变现的问题，通过全新的内容价值评估体系保证优质内容的生产者直接 获得收益。通过“打赏模式”给予优质新闻发布者、分享者代币激励，构建一 个有价值且符合大众需求的新闻聚合和内容分享平台。
+string_dappIntroductionContent2=孔明屋致力于打造一个公正、安全、高效的社会化预测市场平台。用区块链的力量联接每个人的智慧，通过汇聚每个参与者的知识和经验实现对事件进行精准的预测。区块链公开透明、不可篡改等特性让预测过程公开公正、安全可靠，通过经济激励机制促使参与者真实的表达自己对未来事件的判断，大大降低了人为预测的随意性，实现低成本高效的预测。
+string_dappIntroductionContent3=帮呗是一款基于Asch链的具有用户线上发布任务以及用户线上领取任务、用户聊天、浏览新闻等功能的轻社交类、新闻类、平台类移动端应用。帮呗通过线上的匹配规则将个人或者集体的需求发布给其他个人或者集体，其他个人或者集体了解需求通过线下或者线上渠道完成用户的需求。以此来增加人与人之间的互动，解决现实社会中普遍存在的人情冷暖问题增加社会互帮互助的友好氛围达到建设一个善良友好的社会环境的目的。
+string_dappIntroductionContent4=Hello kimi是国内首款基于区块链技术（Asch侧链）开发的云宠物社交休闲游戏平台，Hellokimi游戏定位的是区块链社交休闲游戏，实现可多人同时在线，并不是普通的养猫游戏。ASCH是基于侧链技术开发的区块链底层系统平台，可承载高并发的第三方应用，可保证第三方应用的稳定和安全的运行。
+
+string_websiteText1=官网
+string_whitePaper1=白皮书
+
+string_dappFooterText11=微信
+string_dappFooterText12=微博
+string_dappFooterText13=电子邮箱
