--- a/resources/i18n/strings_zh-CN.properties
+++ b/resources/i18n/strings_zh-CN.properties
@@ -35,8 +35,8 @@ string_applicationDetailTitle3=帮呗
 string_applicationDetailDescribe3=帮呗是一款基于Asch链的具有用户线上发布任务以及用户线上领取任务、用户聊天、浏览新闻等功能的轻社交类、新闻类、平台类移动端应用。
 string_applicationDetailDescribe4=Hello kimi是国内首款基于区块链技术（Asch侧链）开发的云宠物社交休闲游戏应用平台。
 
-string_feature1=特点 01.
-string_feature2=特点 02.
+string_feature1=特点 01
+string_feature2=特点 02
 string_commonText1=下一代去中心化应用平台
 string_featuresTopTitle=公有链
 string_featuresTopTitleContent=阿希的公有链主要负责基础设施、应用间的数据共享以及资产路由，SDK负责构建具体的应用。
